--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,9 @@
             <version>3.141.59</version>
         </dependency>
         <dependency>
-            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.11.3</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-1</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
